исправлен src img в error404.html

--- a/express&vue/frontend/error404.html
+++ b/express&vue/frontend/error404.html
@@ -16,7 +16,7 @@
 <body>
   <div class="absCenter">
     <h1 style="color: silver;">404... Not Found</h1>
-    <img src="../sad.svg" width="100px;" />
+    <img src="sad.svg" width="100px;" />
   </div>
 </body>
 </html>
